# bare-lief

./: CMakeLists.txt  binding.cc  index.js  package.json  test.js
lib/: constants.js  elf.h  elf.js  handle.h  macho.h  macho.js  pe.h  pe.js
lib/elf/: binary.js  dynamic-entry.js  section.js  symbol.js
lib/macho/: binary.js  fat-binary.js  fat-finary.js  load-command.js  section.js  segment-command.js
lib/pe/: binary.js  optional-header.js  section.js
test/: CMakeLists.txt
test/fixtures/executable/: CMakeLists.txt
test/fixtures/executable/darwin-arm64/: exe
test/fixtures/executable/linux-arm64/: exe
test/fixtures/shared-library/: CMakeLists.txt
test/fixtures/shared-library/darwin-arm64/: liblib.dylib
